# MediaHandler

./: .gitignore  CMakeLists.txt  PSRT.py  README.md  config.json  file_handler.py  logger.py  main.py  vcpkg.json
C/: CMakeLists.txt  main.c
C/include/: compressor.h  file_handler.h  image_compressor.h  logger.h  media_migration.h  video_compressor.h
C/src/: compressor.c  file_handler.c  image_compressor.c  logger.c  main.c  media_migration.c  video_compressor.c
C/tests/: test_logger.cpp
C/tests/include/: test_utilities.h
C/tests/src/: test_compression.cpp  test_logger.cpp  test_migration.cpp  test_organize.cpp  test_retry.cpp  test_utilities.cpp
Python/: PSRT.py  compressor.py
Python/tests/: conftest.py  test_compression.py  test_logging.py  test_modes.py
include/: file_handler.h  image_compressor.h  logger.h  media_migration.h  video_compressor.h
include/compressor/: compression_engine.h  image_compressor.h  image_processor.h  video_compressor.h  video_processor.h
include/media_handler/: compression_engine.h
include/utils/: app_args.h  config.h  organizer.h  process_result.h  progress_tracker.h  retry_log.h  utils.h
src/: file_handler.c  image_compressor.c  logger.c  main.c  main.cpp  media_migration.cpp  video_compressor.c
src/compressor/: compression_engine.cpp  image_compressor.cpp  image_processor.cpp  video_compressor.cpp  video_processor.cpp
src/media_handler/: compression_engine.cpp
src/utils/: app_args.cpp  config.cpp  logger.cpp  organizer.cpp  progress_tracker.cpp  retry_log.cpp
tests/: conftest.py  test_common.cpp  test_common.h  test_compression_engine.cpp  test_config.cpp  test_image_compressor.cpp  test_logger.cpp  test_organizer.cpp  test_progress_tracker.cpp  test_retry_mode.cpp  test_video_compressor.cpp
tests/src/: test_compression.cpp  test_logger.cpp  test_migration.cpp  test_organize.cpp
